fix post client integration
