# internal/handlers/post/delete.go
@@ -7,6 +7,8 @@ import (
 	"pinstack-api-gateway/internal/middlewares"
 	"pinstack-api-gateway/internal/utils"
 	"strconv"
+
+	"github.com/go-chi/chi"
 )
 
 // Delete godoc
@@ -15,18 +17,18 @@ import (
 // @Tags posts
 // @Produce json
 // @Security BearerAuth
-// @Param id query string true "Post ID"
+// @Param id path string true "Post ID"
 // @Success 200 {object} map[string]string "Post deleted successfully"
 // @Failure 400 {object} map[string]string "Bad request"
 // @Failure 401 {object} map[string]string "Unauthorized"
 // @Failure 403 {object} map[string]string "Forbidden"
 // @Failure 404 {object} map[string]string "Post not found"
 // @Failure 500 {object} map[string]string "Internal server error"
-// @Router /posts [delete]
+// @Router /posts/{id} [delete]
 func (h *PostHandler) Delete(w http.ResponseWriter, r *http.Request) {
-	idStr := r.URL.Query().Get("id")
+	idStr := chi.URLParam(r, "id")
 	if idStr == "" {
-		h.log.Debug("Missing post id in query params")
+		h.log.Debug("Missing post id in path params")
 		utils.SendError(w, http.StatusBadRequest, custom_errors.ErrInvalidInput.Error())
 		return
 	}
